test/classes/delete-free/coercions-upon-return.good
coercions-upon-return.chpl:8: In function 'rets':
coercions-upon-return.chpl:9: error: could not coerce a value of type 'Gen(real(64))' to type 'unmanaged Gen' upon return
